force-app/main/default/objects/Account/fields/Commercial_Brand__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Brand__c</fullName>
    <label>Commercial Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>