force-app/main/default/objects/Account/fields/DEFAULT__c.field-meta.xml
<CustomField>
    <fullName>DEFAULT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default per Fatture</label>
    <type>Checkbox</type>
</CustomField>