force-app/main/default/objects/Account/fields/Default_per_Budgets__c.field-meta.xml
<CustomField>
    <fullName>Default_per_Budgets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default per Budgets</label>
    <type>Checkbox</type>
</CustomField>