force-app/main/default/objects/Account/fields/Donation_Percentage_Withheld__c.field-meta.xml
<CustomField>
    <fullName>Donation_Percentage_Withheld__c</fullName>
    <label>Donation Percentage Withheld</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>