force-app/main/default/objects/Account/fields/GRATUITO__c.field-meta.xml
<CustomField>
    <fullName>GRATUITO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestazioni Gratuite</label>
    <type>Checkbox</type>
</CustomField>