force-app/main/default/objects/Account/fields/Nome_Donatore__c.field-meta.xml
<CustomField>
    <fullName>Nome_Donatore__c</fullName>
    <formula>IF( IsPersonAccount ,
     PersonContact.FirstName  &amp; &quot; &quot; &amp; PersonContact.LastName,
    Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Donatore</label>
    <type>Text</type>
</CustomField>