force-app/main/default/objects/Account/fields/P_IVA__c.field-meta.xml
<CustomField>
    <fullName>P_IVA__c</fullName>
    <label>P. IVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>