force-app/main/default/objects/Account/fields/StructureCode__c.field-meta.xml
<CustomField>
    <fullName>StructureCode__c</fullName>
    <label>Codice Fornitore</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>