force-app/main/default/objects/Account/fields/StructureType__c.field-meta.xml
<CustomField>
    <fullName>StructureType__c</fullName>
    <label>Settore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureType2</valueSetName>
    </valueSet>
</CustomField>