force-app/main/default/objects/Account/fields/Totale_Allocabile__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocabile__c</fullName>
    <label>Totale Allocabile</label>
    <summarizedField>Totali_Donatore_Anno__c.Allocabile__c</summarizedField>
    <summaryForeignKey>Totali_Donatore_Anno__c.Donatore__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>