force-app/main/default/objects/Account/fields/Totale_Allocato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato__c</fullName>
    <label>Totale Allocato</label>
    <summarizedField>Totali_Donatore_Anno__c.Totale_Allocato__c</summarizedField>
    <summaryForeignKey>Totali_Donatore_Anno__c.Donatore__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>