force-app/main/default/objects/Account/fields/Totale_Donato_Originale__c.field-meta.xml
<CustomField>
    <fullName>Totale_Donato_Originale__c</fullName>
    <label>Totale Donato Originale</label>
    <summarizedField>Totali_Donatore_Anno__c.Donato_Originale__c</summarizedField>
    <summaryForeignKey>Totali_Donatore_Anno__c.Donatore__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>