force-app/main/default/objects/Account/fields/Totale_Minuti_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Minuti_Visite__c</fullName>
    <label>Totale Minuti Visite</label>
    <summarizedField>Totali_Donatore_Anno__c.Totale_Durata_Visite__c</summarizedField>
    <summaryForeignKey>Totali_Donatore_Anno__c.Donatore__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>