force-app/main/default/objects/Account/fields/Totale_Non_Fatturato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Non_Fatturato__c</fullName>
    <formula>Totale_Allocato__c  -  Totale_Ammontare_Fatture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Non Fatturato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>