force-app/main/default/objects/Account/fields/Totale_Numero_Fatture__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Fatture__c</fullName>
    <label>Totale Numero Fatture</label>
    <summarizedField>Totali_Donatore_Anno__c.Numero_Fatture__c</summarizedField>
    <summaryForeignKey>Totali_Donatore_Anno__c.Donatore__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>