force-app/main/default/objects/Account/fields/ValidatedStructure__c.field-meta.xml
<CustomField>
    <fullName>ValidatedStructure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Struttura Validata</label>
    <type>Checkbox</type>
</CustomField>