force-app/main/default/objects/Account/recordTypes/Structure.recordType-meta.xml
<RecordType>
    <fullName>Structure</fullName>
    <active>true</active>
    <label>Fornitore</label>
</RecordType>