force-app/main/default/objects/Account/listViews/Donatori.listView-meta.xml
<ListView>
    <fullName>Donatori</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Commercial_Brand__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PC_TITLE</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CF__c</columns>
    <columns>P_IVA__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Investor</value>
    </filters>
    <label>Donatori</label>
</ListView>