force-app/main/default/objects/Account/listViews/partners.listView-meta.xml
<ListView>
    <fullName>partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PC_TITLE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Partner</value>
    </filters>
    <label>Partners</label>
</ListView>