force-app/main/default/objects/Account/listViews/Structures.listView-meta.xml
<ListView>
    <fullName>Structures</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>StructureCode__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CF__c</columns>
    <columns>P_IVA__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Structure</value>
    </filters>
    <label>Strutture</label>
</ListView>